// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activatable.ts should render activator slot with hover 1`] = `
<div>
  <button aria-haspopup="true"
          aria-expanded="false"
  >
  </button>
</div>
`;

exports[`activatable.ts should render activator slot with listeners 1`] = `
<div>
  <button role="button"
          aria-haspopup="true"
          aria-expanded="false"
  >
  </button>
</div>
`;
